--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
     tools:context=".MainActivity">
 
 
+    <TextView
+        android:id="@+id/titulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:text="ENTRAR"
+        android:textStyle="bold"
+        android:textSize="40sp"
+        android:textColor="@color/Black"
+        android:layout_centerHorizontal="true"
+        />
 
-</android.support.constraint.ConstraintLayout>
+
+     <TextView
+         android:id="@+id/TxtUtilizador"
+         android:layout_below="@+id/titulo"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginTop="60dp"
+         android:layout_marginLeft="15dp"
+         android:text="Nome do Utilizador:"
+         android:textSize="15sp"
+         android:textColor="@color/Black"/>
+
+    <EditText
+        android:id="@+id/editUtilizador"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/TxtUtilizador"
+        android:layout_below="@+id/titulo"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="5dp"
+        android:hint="Nome do Utilizador"
+        android:textAlignment="center"/>
+
+      <TextView
+          android:id="@+id/txtPasse"
+          android:layout_below="@+id/TxtUtilizador"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="60dp"
+          android:layout_marginLeft="15dp"
+          android:text="Palavra-Passe:"
+          android:textSize="15sp"
+          android:textColor="@color/Black"/>
+
+    <EditText
+        android:id="@+id/editPasse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/txtPasse"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="5dp"
+        android:layout_below="@+id/editUtilizador"
+        android:inputType="textPassword"
+        android:hint="Palavra-Passe"
+        android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/btnEntrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editPasse"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:text="Entrar"
+            android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/btnNotas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnEntrar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="Notas Pessoais"
+        android:textSize="20sp" />
+
+
+
+</RelativeLayout>
