Get and Add Nota

--- a/app/src/main/res/layout/content_nota.xml
+++ b/app/src/main/res/layout/content_nota.xml
@@ -8,4 +8,18 @@
     tools:context=".NotaActivity"
     tools:showIn="@layout/activity_nota">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lista"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/row_list_item"
+        />
+
 </android.support.constraint.ConstraintLayout>
