--- a/app/src/main/res/layout-land/activity_new_nota.xml
+++ b/app/src/main/res/layout-land/activity_new_nota.xml
@@ -10,76 +10,83 @@
     tools:context=".NewNotaActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <RelativeLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/txtNota"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
                 android:layout_centerHorizontal="true"
                 android:text="NOTAS"
                 android:textColor="@color/Black"
                 android:textSize="60sp"
-                android:id="@+id/txtNota"/>
+                tools:layout_editor_absoluteX="237dp"
+                tools:layout_editor_absoluteY="0dp" />
+
 
             <TextView
-                android:layout_below="@+id/txtNota"
+                android:id="@+id/txtTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
+                android:layout_below="@+id/txtNota"
+                android:layout_marginTop="16dp"
                 android:text="Titulo"
                 android:textColor="@color/Black"
-                android:textSize="40sp"
-                android:id="@+id/txtTitulo"/>
+                android:textSize="40sp" />
 
             <EditText
                 android:id="@+id/editTitulo"
+                android:layout_width="527dp"
+                android:layout_height="55dp"
                 android:layout_below="@id/txtTitulo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:hint="Introduzir Titulo"/>
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="-56dp"
+                android:layout_toRightOf="@id/txtTitulo"
+                android:hint="Introduzir Titulo" />
 
             <TextView
-                android:layout_below="@+id/editTitulo"
+                android:id="@+id/txtDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
+                android:layout_below="@+id/txtTitulo"
+                android:layout_marginTop="54dp"
                 android:text="Descrição"
                 android:textColor="@color/Black"
-                android:textSize="40sp"
-                android:id="@+id/txtDesc"/>
+                android:textSize="40sp" />
 
             <EditText
                 android:id="@+id/editDesc"
-                android:layout_width="match_parent"
-                android:layout_height="134dp"
-                android:layout_below="@+id/txtDesc"
+                android:layout_width="468dp"
+                android:layout_height="55dp"
+                android:layout_below="@+id/editTitulo"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="54dp"
+                android:layout_toRightOf="@+id/txtDesc"
                 android:hint="Introduzir Descrição" />
 
             <TextView
-                android:layout_below="@+id/editDesc"
+                android:id="@+id/txtTipo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"
+                android:layout_below="@+id/txtDesc"
+                android:layout_marginTop="41dp"
                 android:text="Tipo"
                 android:textColor="@color/Black"
-                android:textSize="40sp"
-                android:id="@+id/txtTipo"/>
+                android:textSize="40sp" />
 
             <EditText
                 android:id="@+id/editTipo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="543dp"
+                android:layout_height="56dp"
                 android:layout_below="@+id/txtTipo"
-                android:layout_marginTop="22dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="-56dp"
+                android:layout_toRightOf="@+id/txtTipo"
                 android:hint="Introduzir Tipo de Nota" />
 
             <Button
@@ -88,9 +95,11 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/editTipo"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="44dp"
                 android:text="Guardar" />
-
         </RelativeLayout>
     </ScrollView>
+
+
+
 </RelativeLayout>
