--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,86 +11,112 @@
     android:paddingTop="16dp"
     tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/titulo"
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:text="ENTRAR"
-        android:textStyle="bold"
-        android:textSize="40sp"
-        android:textColor="@color/Black"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="259dp"
+                android:layout_height="206dp"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/ic_launcher_background"
+                android:layout_marginTop="20dp"/>
 
 
-     <TextView
-         android:id="@+id/TxtUtilizador"
-         android:layout_below="@+id/titulo"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="60dp"
-         android:layout_marginLeft="15dp"
-         android:text="Nome do Utilizador:"
-         android:textSize="15sp"
-         android:textColor="@color/Black"/>
-
-    <EditText
-        android:id="@+id/editUtilizador"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/TxtUtilizador"
-        android:layout_below="@+id/titulo"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="5dp"
-        android:hint="Nome do Utilizador"
-        android:textAlignment="center"/>
-
-      <TextView
-          android:id="@+id/txtPasse"
-          android:layout_below="@+id/TxtUtilizador"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="60dp"
-          android:layout_marginLeft="15dp"
-          android:text="Palavra-Passe:"
-          android:textSize="15sp"
-          android:textColor="@color/Black"/>
-
-    <EditText
-        android:id="@+id/editPasse"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/txtPasse"
-        android:layout_marginTop="35dp"
-        android:layout_marginLeft="5dp"
-        android:layout_below="@+id/editUtilizador"
-        android:inputType="textPassword"
-        android:hint="Palavra-Passe"
-        android:textAlignment="center"/>
-
-        <Button
-            android:id="@+id/btnEntrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/editPasse"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:text="Entrar"
-            android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/btnNotas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnEntrar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="Notas Pessoais"
-        android:onClick="btnNotas"
-        android:textSize="20sp" />
+            <TextView
+                android:id="@+id/titulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="220dp"
+                android:text="ENTRAR"
+                android:textStyle="bold"
+                android:textSize="40sp"
+                android:textColor="@color/Black"
+                android:layout_centerHorizontal="true"
+                />
 
 
+            <TextView
+                android:id="@+id/TxtUtilizador"
+                android:layout_below="@+id/titulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:layout_marginLeft="15dp"
+                android:text="Nome do Utilizador:"
+                android:textSize="15sp"
+                android:textColor="@color/Black"/>
 
+            <EditText
+                android:id="@+id/editUtilizador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/TxtUtilizador"
+                android:layout_below="@+id/titulo"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="5dp"
+                android:hint="Nome do Utilizador"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/txtPasse"
+                android:layout_below="@+id/TxtUtilizador"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:layout_marginLeft="15dp"
+                android:text="Palavra-Passe:"
+                android:textSize="15sp"
+                android:textColor="@color/Black"/>
+
+            <EditText
+                android:id="@+id/editPasse"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/txtPasse"
+                android:layout_marginTop="35dp"
+                android:layout_marginLeft="5dp"
+                android:layout_below="@+id/editUtilizador"
+                android:inputType="textPassword"
+                android:hint="Palavra-Passe"
+                android:textAlignment="center"/>
+
+            <Button
+                android:id="@+id/btnEntrar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editPasse"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
+                android:text="Entrar"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btnRegisto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:text="Registar"
+                android:textSize="20sp"
+                android:layout_below="@+id/btnEntrar"
+                />
+
+            <Button
+                android:id="@+id/btnNotas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btnRegisto"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:text="Notas Pessoais"
+                android:onClick="btnNotas"
+                android:textSize="20sp" />
+        </RelativeLayout>
+
+    </ScrollView>
 </RelativeLayout>
